# proyecto_arquitectura

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  main_aos.cpp  main_soa.cpp  touch.txt
common/: CMakeLists.txt  binaryio.cpp  binaryio.hpp  progargs.cpp  progargs.hpp
imgaos/: CMakeLists.txt  imageaos.cpp  imageaos.hpp  imgaos
imgsoa/: CMakeLists.txt  imagesoa.cpp  imagesoa.hpp
imtool-aos/: CMakeLists.txt  imtool  main.cpp  test_input_control.sh
imtool-soa/: CMakeLists.txt  imtool  main.cpp
